[gd_scene load_steps=7 format=3 uid="uid://c58iq3wgcd4xj"]

[ext_resource type="Script" path="res://GoatHead.gd" id="1_05l85"]
[ext_resource type="Texture2D" uid="uid://dtxn6rube6gcw" path="res://Assets/sprites/chubaspriteminion.png" id="2_uvclt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_teiet"]
radius = 312.41

[sub_resource type="LabelSettings" id="LabelSettings_2q00l"]
font_size = 15

[sub_resource type="CircleShape2D" id="CircleShape2D_p3feb"]
radius = 24.0208

[sub_resource type="CircleShape2D" id="CircleShape2D_r7jp3"]
radius = 18.0278

[node name="GoatHead" type="CharacterBody2D" groups=["enemy"]]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("1_05l85")

[node name="GoatSprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_uvclt")

[node name="SenseArea" type="Area2D" parent="."]
collision_mask = 3

[node name="SenseCollision" type="CollisionShape2D" parent="SenseArea"]
shape = SubResource("CircleShape2D_teiet")

[node name="HpDisplay" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -20.0
offset_top = -34.0
offset_right = 20.0
offset_bottom = -11.0
text = "hp:"
label_settings = SubResource("LabelSettings_2q00l")

[node name="HitArea" type="Area2D" parent="."]
collision_mask = 3

[node name="HitCollision" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_p3feb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r7jp3")

[node name="Blood_Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="SenseArea" to="." method="_on_sense_area_body_entered"]
[connection signal="body_exited" from="SenseArea" to="." method="_on_sense_area_body_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_hit_area_body_exited"]
[connection signal="timeout" from="Blood_Timer" to="." method="_on_timer_timeout"]
